--- a/BinarySrc/packages.config
+++ b/BinarySrc/packages.config
@@ -1,28 +1,21 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="BouncyCastle" version="1.8.5" targetFramework="net461" />
-  <package id="EntityFramework" version="6.3.0" targetFramework="net461" />
-  <package id="Google.Protobuf" version="3.11.4" targetFramework="net461" />
-  <package id="K4os.Compression.LZ4" version="1.1.11" targetFramework="net461" />
-  <package id="K4os.Compression.LZ4.Streams" version="1.1.11" targetFramework="net461" />
-  <package id="K4os.Hash.xxHash" version="1.0.6" targetFramework="net461" />
-  <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net461" />
-  <package id="MySql.Data" version="8.0.23" targetFramework="net461" />
-  <package id="NetTopologySuite" version="2.0.0" targetFramework="net461" />
-  <package id="NetTopologySuite.IO.PostGis" version="2.0.0" targetFramework="net461" />
-  <package id="Npgsql" version="5.0.3" targetFramework="net461" />
-  <package id="Npgsql.NetTopologySuite" version="5.0.3" targetFramework="net461" />
-  <package id="Oracle.ManagedDataAccess" version="19.10.1" targetFramework="net461" />
-  <package id="SSH.NET" version="2020.0.0" targetFramework="net461" />
-  <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.113.3" targetFramework="net461" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net461" />
+  <package id="MySqlConnector" version="1.3.11" targetFramework="net461" />
+  <package id="NetTopologySuite" version="2.3.0" targetFramework="net461" />
+  <package id="NetTopologySuite.IO.PostGis" version="2.1.0" targetFramework="net461" />
+  <package id="Npgsql" version="5.0.7" targetFramework="net461" />
+  <package id="Npgsql.NetTopologySuite" version="5.0.7" targetFramework="net461" />
+  <package id="Oracle.ManagedDataAccess" version="19.12.0" targetFramework="net461" />
+  <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.114.0" targetFramework="net461" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net461" />
-  <package id="System.Data.SQLite.Core" version="1.0.113.7" targetFramework="net461" />
-  <package id="System.Memory" version="4.5.3" targetFramework="net461" />
+  <package id="System.Data.SQLite.Core" version="1.0.114.3" targetFramework="net461" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net461" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net461" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.6.0" targetFramework="net461" />
-  <package id="System.Text.Encodings.Web" version="4.6.0" targetFramework="net461" />
-  <package id="System.Text.Json" version="4.6.0" targetFramework="net461" />
-  <package id="System.Threading.Channels" version="4.7.0" targetFramework="net461" />
-  <package id="System.Threading.Tasks.Extensions" version="4.5.3" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net461" />
+  <package id="System.Text.Encodings.Web" version="5.0.1" targetFramework="net461" />
+  <package id="System.Text.Json" version="5.0.2" targetFramework="net461" />
+  <package id="System.Threading.Channels" version="5.0.0" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
 </packages>
