--- a/ModuleSrc/My Project/launchSettings.json
+++ b/ModuleSrc/My Project/launchSettings.json
@@ -3,7 +3,7 @@
     "ModuleSrc": {
       "commandName": "Executable",
       "executablePath": "pwsh",
-      "commandLineArgs": "-noexit -nologo -noprofile -command \"function prompt {'Testing SimplySQL> '}; .\\LoadDlls.ps1; Import-Module .\\SimplySql.dll\""
+      "commandLineArgs": "-noexit -nologo -noprofile -command \"function prompt {'Testing SimplySQL> '}; Import-Module .\\SimplySql.dll\""
     }
   }
 }
