--- a/source/SimplySql.Cmdlets/SimplySql.Cmdlets.vbproj
+++ b/source/SimplySql.Cmdlets/SimplySql.Cmdlets.vbproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\SimplySql.Common\SimplySql.Common.vbproj" />
     <ProjectReference Include="..\SimplySql.Engine\SimplySql.Engine.vbproj" />
   </ItemGroup>
 
