--- a/source/SimplySql.Engine/SimplySql.Engine.vbproj
+++ b/source/SimplySql.Engine/SimplySql.Engine.vbproj
@@ -3,10 +3,24 @@
   <PropertyGroup>
     <RootNamespace>SimplySql.Engine</RootNamespace>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
+    <Version>2.0.0.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="EnumerableToDataReader" Version="1.1.0" />
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="5.0.1" />
+    <PackageReference Include="Microsoft.Data.Sqlite" Version="7.0.0" />
     <PackageReference Include="MySqlConnector" Version="2.2.0" />
+    <PackageReference Include="Npgsql" Version="7.0.0" />
+    <PackageReference Include="Npgsql.NetTopologySuite" Version="7.0.0" />
+    <PackageReference Include="Oracle.ManagedDataAccess" Version="21.8.0">
+      <NoWarn>NU1701</NoWarn>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SimplySql.Common\SimplySql.Common.vbproj" />
   </ItemGroup>
 
 </Project>
