--- a/source/SimplySql.Cmdlets/SimplySql.Cmdlets.vbproj
+++ b/source/SimplySql.Cmdlets/SimplySql.Cmdlets.vbproj
@@ -4,6 +4,8 @@
     <RootNamespace>SimplySql.Cmdlets</RootNamespace>
     <TargetFramework>netstandard2.0</TargetFramework>
     <Version>2.0.0</Version>
+    <RunAnalyzersDuringLiveAnalysis>False</RunAnalyzersDuringLiveAnalysis>
+    <AnalysisLevel>latest-minimum</AnalysisLevel>
   </PropertyGroup>
 
   <ItemGroup>
