--- a/source/SimplySql.Common/SimplySql.Common.vbproj
+++ b/source/SimplySql.Common/SimplySql.Common.vbproj
@@ -4,6 +4,9 @@
     <RootNamespace>SimplySql.Common</RootNamespace>
     <TargetFramework>netstandard2.0</TargetFramework>
     <Version>2.0.0</Version>
+    <RunAnalyzersDuringLiveAnalysis>False</RunAnalyzersDuringLiveAnalysis>
+    <EnableNETAnalyzers>True</EnableNETAnalyzers>
+    <AnalysisLevel>latest-minimum</AnalysisLevel>
   </PropertyGroup>
 
 </Project>
