--- a/source/SimplySql.Engine/SimplySql.Engine.vbproj
+++ b/source/SimplySql.Engine/SimplySql.Engine.vbproj
@@ -12,14 +12,14 @@
 
   <ItemGroup>
     <PackageReference Include="EnumerableToDataReader" Version="1.1.0" />
-    <PackageReference Include="Microsoft.Data.SqlClient" Version="5.0.1" />
-    <PackageReference Include="Microsoft.Data.Sqlite" Version="7.0.0" />
     <PackageReference Include="MySqlConnector" Version="2.2.0" />
     <PackageReference Include="Npgsql" Version="7.0.0" />
     <PackageReference Include="Npgsql.NetTopologySuite" Version="7.0.0" />
     <PackageReference Include="Oracle.ManagedDataAccess" Version="21.8.0">
       <NoWarn>NU1701</NoWarn>
     </PackageReference>
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
+    <PackageReference Include="System.Data.SQLite.Core" Version="1.0.113" />
   </ItemGroup>
 
   <ItemGroup>
