Added Script to construct module and place SQLite files into platform specific folders and load them according\ Fixed 78

--- a/source/SimplySql.Cmdlets/My Project/launchSettings.json
+++ b/source/SimplySql.Cmdlets/My Project/launchSettings.json
@@ -4,6 +4,11 @@
       "commandName": "Executable",
       "executablePath": "pwsh",
       "commandLineArgs": "-noexit -nologo -noprofile -file \"..\\..\\..\\..\\ConstructModule.ps1\""
+    },
+    "Powershell": {
+      "commandName": "Executable",
+      "executablePath": "powershell",
+      "commandLineArgs": "-noexit -nologo -noprofile -file \"..\\..\\..\\..\\ConstructModule.ps1\""
     }
   }
 }
