playing with linq expression

--- a/source/SimplySql.Cmdlets/SimplySql.Cmdlets.vbproj
+++ b/source/SimplySql.Cmdlets/SimplySql.Cmdlets.vbproj
@@ -3,12 +3,14 @@
   <PropertyGroup>
     <RootNamespace>SimplySql.Cmdlets</RootNamespace>
     <TargetFramework>netstandard2.0</TargetFramework>
+	<CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
     <Version>2.0.0</Version>
     <RunAnalyzersDuringLiveAnalysis>False</RunAnalyzersDuringLiveAnalysis>
     <AnalysisLevel>latest-minimum</AnalysisLevel>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="EnumerableToDataReader" Version="1.1.0" />
     <PackageReference Include="PowerShellStandard.Library" Version="5.1.1" />
   </ItemGroup>
 
