many changes for building

--- a/source/SimplySql.Cmdlets/My Project/launchSettings.json
+++ b/source/SimplySql.Cmdlets/My Project/launchSettings.json
@@ -3,12 +3,14 @@
     "PWSH": {
       "commandName": "Executable",
       "executablePath": "pwsh",
-      "commandLineArgs": "-noexit -nologo -noprofile -file \"..\\..\\..\\..\\ConstructModule.ps1\""
+      "commandLineArgs": "-noexit -nologo -noprofile -file \"ConstructModule.ps1\"",
+      "workingDirectory": "..\\"
     },
     "Powershell": {
       "commandName": "Executable",
       "executablePath": "powershell",
-      "commandLineArgs": "-noexit -nologo -noprofile -file \"..\\..\\..\\..\\ConstructModule.ps1\""
+      "commandLineArgs": "-noexit -nologo -noprofile -file \"ConstructModule.ps1\"",
+      "workingDirectory": "..\\"
     }
   }
 }
