--- a/source/SimplySql.Engine/SimplySql.Engine.vbproj
+++ b/source/SimplySql.Engine/SimplySql.Engine.vbproj
@@ -20,12 +20,13 @@
 
   <ItemGroup>
     <PackageReference Include="EnumerableToDataReader" Version="1.1.0" />
-    <PackageReference Include="MySqlConnector" Version="2.2.2" />
-    <PackageReference Include="Npgsql" Version="7.0.0" />
-    <PackageReference Include="Npgsql.NetTopologySuite" Version="7.0.0" />
-    <PackageReference Include="Oracle.ManagedDataAccess" Version="21.8.0">
+    <PackageReference Include="MySqlConnector" Version="2.2.6" />
+    <PackageReference Include="Npgsql" Version="7.0.4" />
+    <PackageReference Include="Npgsql.NetTopologySuite" Version="7.0.4" />
+    <PackageReference Include="Oracle.ManagedDataAccess" Version="21.10.0">
       <NoWarn>NU1701</NoWarn>
     </PackageReference>
+    <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
     <PackageReference Include="System.Data.SQLite.Core" Version="1.0.117" />
   </ItemGroup>
