refactoring and implementing oracle provider

--- a/source/SimplySql.Engine/SimplySql.Engine.vbproj
+++ b/source/SimplySql.Engine/SimplySql.Engine.vbproj
@@ -24,9 +24,7 @@
     <PackageReference Include="MySqlConnector" Version="2.2.6" />
     <PackageReference Include="Npgsql" Version="7.0.4" />
     <PackageReference Include="Npgsql.NetTopologySuite" Version="7.0.4" />
-    <PackageReference Include="Oracle.ManagedDataAccess" Version="21.10.0">
-      <NoWarn>NU1701</NoWarn>
-    </PackageReference>
+    <PackageReference Include="Oracle.ManagedDataAccess.Core" Version="2.19.190" />
     <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
     <PackageReference Include="System.Data.SQLite.Core" Version="1.0.118" />
   </ItemGroup>
