fixed issue with context loading not using environment specific separators

--- a/source/SimplySql.Cmdlets/My Project/launchSettings.json
+++ b/source/SimplySql.Cmdlets/My Project/launchSettings.json
@@ -11,6 +11,12 @@
       "executablePath": "powershell",
       "commandLineArgs": "-noexit -nologo -noprofile -file \"ConstructModule.ps1\"",
       "workingDirectory": "..\\"
+    },
+    "WSL": {
+      "commandName": "Executable",
+      "executablePath": "wsl",
+      "commandLineArgs": "pwsh",
+      "workingDirectory": "..\\",
     }
   }
 }
