--- a/source/SimplySql.Cmdlets/SimplySql.Cmdlets.vbproj
+++ b/source/SimplySql.Cmdlets/SimplySql.Cmdlets.vbproj
@@ -6,6 +6,7 @@
     <Version>2.0.0</Version>
     <RunAnalyzersDuringLiveAnalysis>False</RunAnalyzersDuringLiveAnalysis>
     <AnalysisLevel>latest-minimum</AnalysisLevel>
+    <OutputType>Library</OutputType>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
