--- a/source/SimplySql.Engine/SimplySql.Engine.vbproj
+++ b/source/SimplySql.Engine/SimplySql.Engine.vbproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <RootNamespace>SimplySql.Engine</RootNamespace>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFrameworks>netstandard2.0;net47;net6.0</TargetFrameworks>
     <Version>2.0.0</Version>
     <RunAnalyzersDuringLiveAnalysis>False</RunAnalyzersDuringLiveAnalysis>
     <EnableNETAnalyzers>True</EnableNETAnalyzers>
